spec/.test/config/invalid/entry/factories.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [
        'id1' => function () {},
        'id2' => 1,
        'id3' => function () {},
    ],
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
    'passes' => [],
    'mappers' => [],
];
